# dotfiles

./: README.md  configuration.nix  dotfiles  flake.nix  hardware-configuration.nix  squirtle_configuration.nix  tyranitar_configuration.nix
dev_flakes/python/: flake.nix
hardware/: squirtle.nix  tyranitar.nix
home_modules/: devices.nix  firefox.nix  fonts.nix  gastly_settings.nix  git.nix  hotspot.sh  litellm.nix  llm.nix  packages.nix  shell.nix  social_media.nix  startup.nix  stylix.nix
home_modules/browser-bookmarks/: firefox-bookmarks.nix  uai-bookmarks.nix
home_modules/nixvim/: auto-complete.nix  debugger.nix  default.nix  keybindings.nix  lsp.nix
home_modules/qutebrowser/: default.nix
home_modules/sway/: default.nix  eww.nix  eww.scss  eww.yuck  execute_in_workspace.sh  keybindings.nix  keyboard_missing_warning.nix  waybar.nix
home_modules/sway/check_services/: Cargo.toml  flake.nix
home_modules/sway/check_services/src/: main.rs
home_modules/window-manager/: default.nix  execute_in_workspace.nix  keybindings.nix  (+1 more)
hosts/: gastly.nix  porygon.nix  squirtle.nix  tyranitar.nix
modules/: audio.nix  browser.nix  git.nix  home-manager.nix  home-ubuntu-uai.nix  kanban.nix  mprocs.nix  neovim.nix  obsidian.nix  shell.nix  ssh.nix  terminal.nix  window-manager.nix
nixos_modules/: audio.nix  bootloader.nix  clan.nix  devices.nix  display-manager.nix  docker.nix  greetd.nix  librechat.nix  llm.nix  lockscreen.nix  networking.nix  ollama.nix  regreet.nix  screensharing.nix  ssh.nix  tuwunel.nix
old/: configuration.nix  hardware-configuration.nix
(+127 files in other folders)
