[package]
name = "check-services-statuses"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zbus = { version = "4", features = ["tokio"] }
futures-util = "0.3"
